# desktop-ai-assistant

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierc  README.md  pyproject.toml
ai_desktop_assistant/: __init__.py  main.py
ai_desktop_assistant/actions/: __init__.py  factory.py
ai_desktop_assistant/actions/commands/: __init__.py  base.py  keyboard.py  mouse.py  system.py  web.py
ai_desktop_assistant/actions/executors/: __init__.py  code_executor.py  keyboard_executor.py  mouse_executor.py  system_executor.py  web_executor.py
ai_desktop_assistant/ai/: __init__.py  gemini_client.py  prompt_templates.py
ai_desktop_assistant/core/: __init__.py  app.py  config.py  di.py  events.py  exceptions.py  state.py
ai_desktop_assistant/input/: __init__.py  keyboard.py  microphone.py  text.py
ai_desktop_assistant/interfaces/: __init__.py  action_executor.py  ai_service.py  input_provider.py  output_provider.py
ai_desktop_assistant/output/: __init__.py  captions.py  notifications.py  speaker.py
ai_desktop_assistant/services/: __init__.py  ai_service_impl.py  telemetry.py
ai_desktop_assistant/ui/: __init__.py  pyqt_ui.py
ai_desktop_assistant/utils/: __init__.py  async_utils.py  logging.py  platform.py
genai_docs/: change_voices.py  context_window_compression.py  full_livestream_example.py  function_calling.py  handling_interruptions.py  incremental_updates.py  media_resolution.py  readme.md  receive_audio.py  send_receive_text.py  session_resumption.py  system_instructions.py  token_count.py
scripts/: __init__.py  build_release.py  setup_dev.py
(+17 files in other folders)
