[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-desktop-assistant"
version = "0.1.0"
description = "AI Desktop Assistant with Google Generative AI integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_desktop_assistant"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12.4"
google-genai = "^1.0.0"
pyside6 = "^6.5.0"
python-dotenv = "^1.0.0"
pyqt5 = "^5.15.9"
qasync = "^0.26.0"
pyaudio = "^0.2.13"
aiohttp = "^3.8.5"
pyautogui = "^0.9.54"
numpy = "^1.24.0"
pyperclip = "^1.8.2"
win10toast = {version = "^0.9", platform = "win32"}
notify2 = {version = "^0.3", platform = "linux"}
opencv-python = "^4.8.0"
mss = "^9.0.1"
pyttsx3 = "^2.90"
SpeechRecognition = "^3.10.0"
keyboard = "^0.13.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-qt = "^4.2.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
ai-assistant = "ai_desktop_assistant.main:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"